--- a/style.css
+++ b/style.css
@@ -261,7 +261,6 @@ img{
     background-color: black;
 }
 
-
 .nav_container ul ul li:hover ul li a{
     background: none;
 }
@@ -274,6 +273,16 @@ img{
     
     left: 180px;
     top: 00px;
-    
+}
 
+
+
+.slider_container{
+    margin: 0 auto;
+    max-width: 960px;
+    width: 96%;
+}
+
+.item{
+    display: none;
 }
