--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ img{
 }
 
 .src-box input[type="submit"]{
-    background: url(/img/src.png);
+    background: url(img/src.png);
     background-repeat: no-repeat;
     background-position: right;
     width: 23%;
@@ -289,4 +289,109 @@ img{
 
 .nav_container ul:hover slider_container{
     z-index: -2;
+}
+
+/*----------------------------------
+             Work Area Css
+------------------------------------*/
+#work_area{
+    padding: 30px 0px;
+}
+.work_container{
+    margin: 0 auto;
+    max-width: 960px;
+    width: 96%;
+    background-color:#f2f2f2;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    cursor: no-drop;
+}
+
+.work_container h2{
+    color: black;
+    font-size: 26px;
+    font-weight: normal;
+    text-align: justify;
+}
+
+.work_container p{
+    color: #878787;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+.work_container a{
+    text-decoration: none;
+    color: red;
+    float: right;
+}
+
+.work_container a:hover{
+    color: blue;
+}
+
+.about_us{
+    flex: 1;
+    margin-left: 0;
+    margin-right: 1.5%;
+}
+
+.about_us a{
+    margin: 10% 0%;
+}
+
+.about_us p{
+    padding-top: 5px;
+}
+.Service_area{
+    flex: 1;
+}
+
+.Service_area a{
+    margin-top: 7.8%;
+    display: block;
+}
+.child_service{
+    margin: 4.13% 0%;
+    display: flex;
+    
+}
+
+.service_img{
+    width: 20%;
+    height: 100%;
+    display: block;
+    padding-top: 9px;
+}
+.service_text{
+    width: 80%;
+    height: fit-content;
+    display: inline-block;
+    padding-left: 10px;
+}
+
+.service_text h3{
+    margin: 0;
+    padding: 0;
+}
+
+.service_text p{
+    margin-top: 0px;
+}
+
+.clients_reviews{
+    flex: 1;
+    margin-right: 0;
+    margin-left: 1.5%;
+}
+
+
+
+.child_clients_reviews{
+    padding: 1%  0%;
+}
+
+.clients_reviews span{
+    font-size: 50px;
 }
